# paylead_case_study

./: .gitignore  DE_assignment.md  config.yaml  pyproject.toml  readme.md
doc/: clickhouse.md  etl.md  index.md  kafka.md
src/: fuzzer.py  transaction_generator.py  utils.py
src/clickhouse/: recorder.py  schema.sql
src/etls/: stream_transactions.py
src/model/: bank.py  consumer.py  merchant.py  transaction.py
src/tasks/: simulate.py  simulation_config.py
tests/: test_fuzzer.py  test_transaction_generator.py  test_utils.py
tests/clickhouse/: test_recorder.py
tests/etls/: test_stream_transactions.py
tests/model/: test_transaction.py
tests/tasks/: test_simulate.py
